--- a/HarlemTech.DataAccess/Properties/Settings.settings
+++ b/HarlemTech.DataAccess/Properties/Settings.settings
@@ -5,7 +5,7 @@
     <Setting Name="harlemtATE5cogWVConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=toj90akyy4.database.windows.net;Initial Catalog=harlemtATE5cogWV;User ID=HarlemAdmin;Password=ht3c4DB2015!;Connect Timeout=60&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=toj90akyy4.database.windows.net;Initial Catalog=harlemtATE5cogWV;User ID=HarlemAdmin;Password=ht3c4DB2015!;Connect Timeout=60</Value>
