--- a/HarlemTech.DataAccess/Properties/Settings.settings
+++ b/HarlemTech.DataAccess/Properties/Settings.settings
@@ -8,7 +8,7 @@
   &lt;ConnectionString&gt;&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=toj90akyy4.database.windows.net;Initial Catalog=harlemtATE5cogWV;User ID=HarlemAdmin;Password=ht3c4DB2015!;Connect Timeout=60</Value>
+      <Value Profile="(Default)"></Value>
     </Setting>
   </Settings>
 </SettingsFile>
